dml-grammar
Model ::= Entity+
Entity ::= "entity" Identifier ("(" Alias ")")? "{" Attribute+ "}"
Identifier ::= letter | "_" | "$" (letter | "_" | "$" | digit)*
Alias ::= Identifier
Attribute ::= "*"? Identifier ("(" Alias ")")? ":" Type "!"? | Identifier "=" JSON
Type ::= DataType
     | EntityName
     | "[" EntityName "]" ("." AttributeName)?
     | "<" EntityName ">" ("." AttributeName)?
     | "[" EntityName "]" ("." AttributeName)? "(" EntityName ")"
DataType ::= "text"
              | "integer" | "int" | "int4"
              | "bool" | "boolean"
              | "bigint"
              | "decimal"
              | "date"
              | "float" | "float8"
              | "uuid"
              | "timestamp"
EntityName ::= Identifier
AttributeName ::= Identifier

/* color: #009688 (teal) */
